--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="colors.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/colors.css')}}">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>UTFSM CSES Leaderboard</title>
 </head>
@@ -33,6 +33,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"></script>
-    <script src="cses.js"></script>
+    <script src="{{ url_for('static', filename='scripts/cses.js')}}"></script>
 </body>
 </html>
